log
Wed 12 Apr 2023 06:51:33 PM UTC: 
 tests:  0|6
total_score: 0/70
9a1e8ef
Wed 12 Apr 2023 09:51:17 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fe85d7c
Wed 12 Apr 2023 09:59:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘clave’ [-Werror=unused-variable]
   43 |   long clave = hash(key,map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0d59391
